# hexlet-flask-example

./: Makefile  example.py  pyproject.toml
dev/: app.py  app_01.py  m3_p12_l_06_request_handlers.py  m3_p12_l_07_http_session.py  m3_p12_l_08_dynamic_routes.py  m3_p12_l_09_template_engine_app.py  m3_p12_l_12_search_forms_app.py  m3_p12_l_14_modifying_forms_app.py  m3_p12_l_14_modifying_forms_data.py  m3_p12_l_14_modifying_forms_validator.py  m3_p12_l_16_crud_app.py  m3_p12_l_17_crud_app.py  m3_p12_l_18_crud_create_app.py  m3_p12_l_18_crud_create_repository.py  m3_p12_l_18_template_crud_create_app.py  m3_p12_l_19_crud_update_app.py  m3_p12_l_19_crud_update_repository.py  m3_p12_l_19_template_crud_update_app.py  m3_p12_l_20_crud_delete_app.py  m3_p12_l_20_template_crud_delete_app.py  m3_p12_l_21_cookies_app.py  m3_p12_l_22_session_app.py
dev/templates/: index.html  m3_p12_l_16_crud_index.html  m3_p12_l_19_template_crud_update_index.html  m3_p12_l_20_template_crud_delete_index.html  m3_p12_l_21_cookies_index.html  m3_p12_l_22_session_index.html
dev/templates/courses/: m3_p12_l_14_template_courses_modifying_forms_index.html  m3_p12_l_14_template_courses_modifying_forms_new.html
dev/templates/layouts/: m3_p12_l_21_cookies_layout.html
dev/templates/posts/: edit.html  form.html  index.html  m3_p12_l_17_templace_posts_crud_index.html  m3_p12_l_17_templace_posts_crud_show.html  m3_p12_l_18_template_crud_create_new.html  show.html  (+7 more)
tests/: test_app.py  test_m3_p12_l_06_request_handlers.py  test_m3_p12_l_08_dynamic_routes.py  test_m3_p12_l_14_modifying_forms_app.py
(+4 files in other folders)
