[tool.poetry]
name = "hexlet-flask-example"
version = "0.1.0"
description = ""
authors = ["akasmall <aka_sm@ro.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^7.1.0"
flask = "^3.0.3"
gunicorn = "^22.0.0"
faker = "^26.0.0"
pytest = "^8.2.2"
requests = "^2.32.3"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
validation = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

 [tool.pytest.ini_options]
 addopts="-n 4"
